examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let xs = [x | <- [1, 2, 3]]
let after = 1
